--- a/css/sass/abstracts/_variables.scss
+++ b/css/sass/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $cyan-hover: #9be3e2;
 $Dark-Violet: hsl(257, 27%, 26%);
 $Red: hsl(0, 87%, 67%);
 $Gray: hsl(0, 0%, 75%);
-$Grayish-Violet: hsl(257, 7%, 63%);
+$Grayish-Violet: #59575f;
 $Very-Dark-Blue: hsl(255, 11%, 22%);
 $Very-Dark-Violet: hsl(260, 8%, 14%);
 $white: #fff;
